// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery should render component with 3 images 1`] = `
<div
  className="str-chat__gallery str-chat__gallery-two-rows"
>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
</div>
`;

exports[`Gallery should render component with 4 images 1`] = `
<div
  className="str-chat__gallery str-chat__gallery--square str-chat__gallery-two-rows"
>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
</div>
`;

exports[`Gallery should render component with 5 images 1`] = `
<div
  className="str-chat__gallery str-chat__gallery--square str-chat__gallery-two-rows"
>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
  <button
    className="str-chat__gallery-placeholder"
    data-testid="gallery-image-last"
    onClick={[Function]}
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
  >
    <p>
      {{ imageCount }} more
    </p>
  </button>
</div>
`;

exports[`Gallery should render component with default props 1`] = `
<div
  className="str-chat__gallery"
>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
  <button
    className="str-chat__gallery-image"
    data-testid="gallery-image"
    onClick={[Function]}
  >
    <img
      alt="User uploaded content"
      src="about:blank"
    />
  </button>
</div>
`;
